--- a/Florencia.Pereyra.TP7.html
+++ b/Florencia.Pereyra.TP7.html
@@ -6,9 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Florecia.Pereyra.TP7.css">
 </head>
 
 <body>
+    <header>
+        <div class="menu">
+            <img src="" alt="">
+            <nav>
+                <ul class="ul1">
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Elemento</a></li>
+                    <li><a href="#">Elemento</a></li>
+                </ul>
+                <ul class="ul2">
+                    <li><a href="#">Elemento</a></li>
+                    <li><a href="#">Elemento</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
 
 </body>
 
