--- a/Florencia.Pereyra.TP7.html
+++ b/Florencia.Pereyra.TP7.html
@@ -10,22 +10,20 @@
 </head>
 
 <body>
-    <header>
-        <div class="menu">
-            <img src="" alt="">
-            <nav>
-                <ul class="ul1">
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Elemento</a></li>
-                    <li><a href="#">Elemento</a></li>
-                </ul>
-                <ul class="ul2">
-                    <li><a href="#">Elemento</a></li>
-                    <li><a href="#">Elemento</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+
+    <div class="menu1">
+        <ul>
+            <li><a href="Logo"> <img src="disenos-de-logos-restaurant-gastronomique-gastronomico-de-lujo.png"
+                        alt="Logo"></a></li>
+            <li> <a href="Menu" class="nav-link">Menu</a></li>
+            <li><a href="Contactanos" class="nav-link">Contactanos</a></li>
+            <li><a href="Nuestra Casa" class="nav-link">Nuestra Casa</a></li>
+            <li><a href="Login" class="nav-link">Login</a></li>
+            <li><a href="Registro" class="nav-link">Registro</a></li>
+        </ul>
+    </div>
+
+
 
 
 </body>
