--- a/Florencia.Pereyra.TP7.html
+++ b/Florencia.Pereyra.TP7.html
@@ -10,22 +10,65 @@
 </head>
 
 <body>
+    <header>
+        <div class="img">
+            <img src="disenos-de-logos-restaurant-gastronomique-gastronomico-de-lujo.png" alt="Logo">
+        </div>
+        <nav class="navList">
+            <ul>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Contactanos</a></li>
+                <li><a href="#">Nuestra Casa</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">Registro</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <div class="menu1">
-        <ul>
-            <li><a href="Logo"> <img src="disenos-de-logos-restaurant-gastronomique-gastronomico-de-lujo.png"
-                        alt="Logo"></a></li>
-            <li> <a href="Menu" class="nav-link">Menu</a></li>
-            <li><a href="Contactanos" class="nav-link">Contactanos</a></li>
-            <li><a href="Nuestra Casa" class="nav-link">Nuestra Casa</a></li>
-            <li><a href="Login" class="nav-link">Login</a></li>
-            <li><a href="Registro" class="nav-link">Registro</a></li>
-        </ul>
+    <div class="seccion1">
+        <div class="plato1">
+            <img src="descarga (1).jfif" alt="Img1">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt sint officiis sed, possimus rerum
+                repellendus laudantium odit error neque iste non laborum laboriosam dolorem exercitationem illum tempora
+                officia perspiciatis ex?</p>
+            <button>Leer Mas</button>
+        </div>
+        <div class="plato2">
+            <img src="descarga.jfif" alt="Img2">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt sint officiis sed, possimus rerum
+                repellendus laudantium odit error neque iste non laborum laboriosam dolorem exercitationem illum tempora
+                officia perspiciatis ex?</p>
+            <button>Leer Mas</button>
+        </div>
+        <div class="plato3">
+            <img src="images (1).jfif" alt="Img3">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt sint officiis sed, possimus rerum
+                repellendus laudantium odit error neque iste non laborum laboriosam dolorem exercitationem illum tempora
+                officia perspiciatis ex?</p>
+            <button>Leer Mas</button>
+        </div>
+        <div class="plato4">
+            <img src="images.jfif" alt="Img4">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt sint officiis sed, possimus rerum
+                repellendus laudantium odit error neque iste non laborum laboriosam dolorem exercitationem illum tempora
+                officia perspiciatis ex?</p>
+            <button>Leer Mas</button>
+        </div>
     </div>
 
 
-
+    <div class="seccion2">
+        <img class="img" src="descarga.jfif" alt="Img2" width="100" height="100">
+        <h5>Pasteleria Internacional</h5>
+    </div>
 
 </body>
+
+<footer>
+    <h5>Visitanos en:</h5>
+    <h5 class="texto2">Calle Falsa 123,Spingfield</h5>
+</footer>
 
 </html>
