--- a/Florencia.Pereyra.TP6.html
+++ b/Florencia.Pereyra.TP6.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Florecia.Pereyra.TP7.css">
+    <link rel="stylesheet" href="Florecia.Pereyra.TP6.css">
 </head>
 
 <body>
@@ -26,6 +26,27 @@
             </ul>
         </nav>
     </header>
+
+    <aside class="cursos">
+        <div class="cursoT">
+            <h2>CURSOS</h2>
+        </div>
+        <div class="cursoPaste">
+            <img src="descarga.jfif" alt="Img2">
+            <p class="text"><strong>Pasteleria Internacional</strong>
+        </div>
+        </p>
+        <div class="cursoPasta">
+            <img src="images.jfif" alt="Img4">
+            <p class="text"><strong> Pastas Frescas</strong>
+        </div>
+        </p>
+        <div class="cursoDulces">
+            <img src="descarga.jfif" alt="Img2">
+            <p class="text"><strong>Postres Regionales</strong>
+        </div>
+        </p>
+    </aside>
 
     <div class="seccion1">
         <div class="plato1">
@@ -57,14 +78,8 @@
             <button>Leer Mas</button>
         </div>
     </div>
-
-
-    <div class="seccion2">
-        <img class="img" src="descarga.jfif" alt="Img2" width="100" height="100">
-        <h5>Pasteleria Internacional</h5>
-    </div>
-
 </body>
+<br>
 
 <footer>
     <h5>Visitanos en:</h5>
